added visualizer to animuse

--- a/Animuse/animuse.html
+++ b/Animuse/animuse.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="visualizer"></div>
       <div class="panel">
         <div class="track-name-display">
           <p>Track Name</p>
@@ -43,7 +44,7 @@
       </div>
 
       <!-- The Audio -->
-      <audio class="audio-track" src="tracks/Joakim Molitor feat Victoria Voss  Standing Still.mp3"></audio>
+      <audio class="audio-track" src="tracks/Marshmallow - Alone.mp3"></audio>
     </div>
     <script src="animuse.js"></script>
   </body>
