added transitions to page text and ramping volume down at end

--- a/Musical_Notes/musical_notes.html
+++ b/Musical_Notes/musical_notes.html
@@ -15,7 +15,12 @@
       <div class="page">
         <div class="front">
           <h2 class="title">Title</h2>
-          <p class="content">Content</p>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            sit iste dignissimos et rem libero quidem necessitatibus quo
+            adipisci in voluptas sequi, eius repudiandae numquam error odit
+            debitis velit eum?
+          </p>
           <h2 class="footer">Footer</h2>
         </div>
         <div class="back">
