added content menu hover sound

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -27,11 +27,11 @@
         <div class="col-12 card-holder" id="content-menu">
             <div class="c_card">
                 <ul class="content-list">
-                    <li class="about"><a href="#">About Me</a></li>
-                    <li class="about"><a href="#">Education</a></li>
-                    <li class="about"><a href="#">Skills</a></li>
-                    <li class="about"><a href="#">Projects</a></li>
-                    <li class="about"><a href="#">Certificates</a></li>
+                    <li id="about" class="content-menu-item"><a href="#">About Me</a></li>
+                    <li id="education" class="content-menu-item"><a href="#">Education</a></li>
+                    <li id="skills" class="content-menu-item"><a href="#">Skills</a></li>
+                    <li id="projects" class="content-menu-item"><a href="#">Projects</a></li>
+                    <li id="certificates" class="content-menu-item"><a href="#">Certificates</a></li>
                 </ul>
             </div>
         </div>
@@ -42,6 +42,7 @@
     </main>
     <div class="wave1"></div>
     <div class="wave2"></div>
+    <audio id="button-hover-audio" src="assets/sounds/button_hover_1.mp3"></audio>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
