--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -16,33 +23,116 @@
   </head>
   <body>
     <main class="row">
-        <div class="col-12 card-holder" id="intro">
-            <div class="c_card">
-                <div class="profile-image">
-                    <img src="assets/images/profile_img.jpg" alt="">
+      <div class="col-12 card-holder" id="intro">
+        <div class="c_card">
+          <div class="profile-image">
+            <img src="assets/images/profile_img.jpg" alt="" />
+          </div>
+          <h1 class="greeting">Hi, I'm Eli</h1>
+        </div>
+      </div>
+      <div class="col-12 card-holder" id="content-menu">
+        <div class="c_card">
+          <ul class="content-list">
+            <li id="about-link" class="content-menu-item">
+              <a href="#about-me">About Me</a>
+            </li>
+            <li id="education-link" class="content-menu-item">
+              <a href="#education">Education</a>
+            </li>
+            <li id="skills-link" class="content-menu-item">
+              <a href="#skills">Skills</a>
+            </li>
+            <li id="projects-link" class="content-menu-item">
+              <a href="#">Projects</a>
+            </li>
+            <li id="certificates-link" class="content-menu-item">
+              <a href="#">Certificates</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="about-me" class="col-12 card-holder" id="education">
+        <div class="c_card">
+          <h1 class="card-title">About Me</h1>
+          <div class="card-content">
+            I loved playing games as a kid. I loved how games showed me many
+            new, exciting workds. But something kept bothering me. How were
+            these wonderful worlds created? How was I able to enjoy such amazing
+            experiences on my screen? These questions led me to discover
+            programming. And programming opened a wholel new world of
+            possibilities for me. The fields that caught my eye were Web
+            Development and Machine Learning. I, therefore strive to develop
+            amazing websites taht make use of Machine Learning to learn patterns
+            that improve user experience.
+          </div>
+        </div>
+      </div>
+      <div id="education" class="col-12 card-holder" id="education">
+        <div class="c_card">
+          <h1 class="card-title">Education</h1>
+          <div class="card-content">
+            I am a sophomore, pursuing a Bachelor's degree in Computer
+            Engineering at the Kwame Nkrumah University of Science and
+            Technology (KNUST). I expect to graduate in the year 2024.
+          </div>
+        </div>
+      </div>
+      <div id="skills" class="col-12 card-holder" id="education">
+        <div class="c_card">
+          <h1 class="card-title">Skills</h1>
+          <div class="card-content">
+            <div class="row h-100">
+              <div class="col-lg-6 skill-set">
+                <div>
+                  <div class="skill-set-title">
+                    <i class="fa-solid fa-robot"></i>
+                    <h5>Machine Learning</h5>
+                  </div>
+                  <ul>
+                    <li>Python</li>
+                    <li>Scikit-Learn</li>
+                    <li>Scipy</li>
+                    <li>Pandas</li>
+                    <li>Matplotlib</li>
+                    <li>Seaborn</li>
+                    <li>Lime</li>
+                    <li>Supervised Learning Algorithms</li>
+                    <li>Unsupervised Learning Algorithms</li>
+                  </ul>
                 </div>
-                <h1 class="greeting">Hi, I'm Eli</h1>
+              </div>
+              <div class="col-lg-6 skill-set">
+                <div>
+                  <div class="skill-set-title">
+                    <i class="fa-solid fa-globe"></i>
+                    <h5>Web Development</h5>
+                  </div>
+                  <ul>
+                    <li>HTML</li>
+                    <li>Javascript</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JQuery</li>
+                    <li>Data Visualiztion with D3</li>
+                    <li>PHP</li>
+                    <li>Nodejs</li>
+                    <li>React</li>
+                    <li>Version Control (Git)</li>
+                  </ul>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="col-12 card-holder" id="content-menu">
-            <div class="c_card">
-                <ul class="content-list">
-                    <li id="about" class="content-menu-item"><a href="#">About Me</a></li>
-                    <li id="education" class="content-menu-item"><a href="#">Education</a></li>
-                    <li id="skills" class="content-menu-item"><a href="#">Skills</a></li>
-                    <li id="projects" class="content-menu-item"><a href="#">Projects</a></li>
-                    <li id="certificates" class="content-menu-item"><a href="#">Certificates</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-12 card-holder" id="education">
-            <div class="c_card">
-            </div>
-        </div>
+      </div>
     </main>
     <div class="wave1"></div>
     <div class="wave2"></div>
-    <audio id="button-hover-audio" src="assets/sounds/button_hover_1.mp3"></audio>
+    <audio
+      id="button-hover-audio"
+      src="assets/sounds/button_hover_1.mp3"
+    ></audio>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
