added certificates section

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -43,16 +43,16 @@
             <li id="skills-link" class="content-menu-item">
               <a href="#skills">Skills</a>
             </li>
+            <li id="certificates-link" class="content-menu-item">
+              <a href="#certificates">Certificates</a>
+            </li>
             <li id="projects-link" class="content-menu-item">
               <a href="#">Projects</a>
-            </li>
-            <li id="certificates-link" class="content-menu-item">
-              <a href="#">Certificates</a>
             </li>
           </ul>
         </div>
       </div>
-      <div id="about-me" class="col-12 card-holder" id="education">
+      <div id="about-me" class="col-12 card-holder">
         <div class="c_card">
           <h1 class="card-title">About Me</h1>
           <div class="card-content">
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div id="education" class="col-12 card-holder" id="education">
+      <div id="education" class="col-12 card-holder">
         <div class="c_card">
           <h1 class="card-title">Education</h1>
           <div class="card-content">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <div id="skills" class="col-12 card-holder" id="education">
+      <div id="skills" class="col-12 card-holder">
         <div class="c_card">
           <h1 class="card-title">Skills</h1>
           <div class="card-content">
@@ -121,6 +121,94 @@
                     <li>Version Control (Git)</li>
                   </ul>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="certificates" class="col-12 card-holder">
+        <div class="c_card">
+          <h1 class="card-title">Certificates</h1>
+          <div class="card-content">
+            <ul class="certificate-list">
+              <li>
+                Machine Learning by Andrew Ng -
+                <span style="color: rgb(0, 86, 210)">Coursera</span>
+              </li>
+              <li>
+                AI For Everyone by Andrew Ng -
+                <span style="color: rgb(0, 86, 210)">Coursera</span>
+              </li>
+              <li>
+                HTML, CSS, and Javascript for Web Developers -
+                <span style="color: rgb(0, 86, 210)">Coursera</span>
+              </li>
+              <li>
+                Web Development Masterclass - Complete Certificate Course -
+                <span style="color: #a435f0">Udemy</span>
+              </li>
+              <li>
+                Responsive Web Design -
+                <span style="color: #0c0c57">FreeCodeCamp</span>
+              </li>
+              <li>
+                Javascript Algorithms and Data Structures -
+                <span style="color: #0c0c57">FreeCodeCamp</span>
+              </li>
+              <li>
+                Front End Development Libraries -
+                <span style="color: #0c0c57">FreeCodeCamp</span>
+              </li>
+              <li>
+                Java Programming: Complete Beginner to Advanced -
+                <span style="color: #a435f0">Udemy</span>
+              </li>
+              <li>
+                Java Programming: AWT Project -
+                <span style="color: #a435f0">Udemy</span>
+              </li>
+              <li>
+                Programming Network Applications in Java -
+                <span style="color: #a435f0">Udemy</span>
+              </li>
+            </ul>
+
+            <div class="all-certs-link">
+              Visit
+              <a
+                target="blank_"
+                href="https://www.linkedin.com/in/eli-bansa-92475b207/details/certifications/"
+                >my LinkedIn profile</a
+              >
+              to see all my certificates
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="projects" class="col-12 card-holder">
+        <div class="c_card">
+          <h1 class="card-title">Projects</h1>
+          <div class="card-content">
+            <div class="row">
+              <div class="col-lg-3 col-md-4 project-card">
+                <a href="">
+                  <h3 class="project-title"></h3>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <a href="">
+                  <h3 class="project-title"></h3>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <a href="">
+                  <h3 class="project-title"></h3>
+                </a>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <a href="">
+                  <h3 class="project-title"></h3>
+                </a>
               </div>
             </div>
           </div>
