added project cards to projects section of profile project

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -47,7 +47,7 @@
               <a href="#certificates">Certificates</a>
             </li>
             <li id="projects-link" class="content-menu-item">
-              <a href="#">Projects</a>
+              <a href="#projects">Projects</a>
             </li>
           </ul>
         </div>
@@ -191,24 +191,76 @@
           <div class="card-content">
             <div class="row">
               <div class="col-lg-3 col-md-4 project-card">
-                <a href="">
-                  <h3 class="project-title"></h3>
-                </a>
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Animuse</h6>
+                  <div class="project-more-info">A music player with an audio visualizer<p>Project in <a href="#">my github</a></p></div>
+                </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
-                <a href="">
-                  <h3 class="project-title"></h3>
-                </a>
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/beatmaker.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Beat Maker</h6>
+                  <div class="project-more-info">A beat maker<p>Project in <a href="#">my github</a></p></div>
+                </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
-                <a href="">
-                  <h3 class="project-title"></h3>
-                </a>
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/musical_notes.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Musical Notes</h6>
+                  <div class="project-more-info">Music playing flip book<p>Project in <a href="#">my github</a></p></div>
+                </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
-                <a href="">
-                  <h3 class="project-title"></h3>
-                </a>
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Project Title</h6>
+                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Project Title</h6>
+                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Project Title</h6>
+                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Project Title</h6>
+                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 project-card">
+                <div class="project-card-inner">
+                  <div class="project-image">
+                    <img src="assets/images/projects/animuse.png" alt="" />
+                  </div>
+                  <h6 class="project-title">Project Title</h6>
+                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                </div>
               </div>
             </div>
           </div>
