--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -196,7 +196,7 @@
                     <img src="assets/images/projects/animuse.png" alt="" />
                   </div>
                   <h6 class="project-title">Animuse</h6>
-                  <div class="project-more-info">A music player with an audio visualizer<p>Project in <a href="#">my github</a></p></div>
+                  <div class="project-more-info">A music player with an audio visualizer<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Animuse">my github</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
@@ -205,7 +205,7 @@
                     <img src="assets/images/projects/beatmaker.png" alt="" />
                   </div>
                   <h6 class="project-title">Beat Maker</h6>
-                  <div class="project-more-info">A beat maker<p>Project in <a href="#">my github</a></p></div>
+                  <div class="project-more-info">A beat maker<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Beatmaker">my github</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
@@ -214,52 +214,52 @@
                     <img src="assets/images/projects/musical_notes.png" alt="" />
                   </div>
                   <h6 class="project-title">Musical Notes</h6>
-                  <div class="project-more-info">Music playing flip book<p>Project in <a href="#">my github</a></p></div>
+                  <div class="project-more-info">Music playing flip book<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Musical_Notes">my github</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/animuse.png" alt="" />
+                    <img src="assets/images/projects/netflix_clone.png" alt="" />
                   </div>
-                  <h6 class="project-title">Project Title</h6>
-                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                  <h6 class="project-title">Netflix Clone</h6>
+                  <div class="project-more-info">A clone of the netflix homepage<p>Project on <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Netflix_Clone">codepen</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/animuse.png" alt="" />
+                    <img src="assets/images/projects/25+5_clock.png" alt="" />
                   </div>
-                  <h6 class="project-title">Project Title</h6>
-                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                  <h6 class="project-title">25 + 5 Clock</h6>
+                  <div class="project-more-info">A 25 + 5 clock<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/wvqjJNN">codepen</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/animuse.png" alt="" />
+                    <img src="assets/images/projects/choropleth_map.png" alt="" />
                   </div>
-                  <h6 class="project-title">Project Title</h6>
-                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                  <h6 class="project-title">Choropleth Map</h6>
+                  <div class="project-more-info">A chloropeth map showing the education attainments for states in the US<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/zYEYqzQ">codepen</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/animuse.png" alt="" />
+                    <img src="assets/images/projects/markdown_previewer.png" alt="" />
                   </div>
-                  <h6 class="project-title">Project Title</h6>
-                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                  <h6 class="project-title">Markdown Previewer</h6>
+                  <div class="project-more-info">Immediately preview the result of your markdown code<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/VwzzNNv">codepen</a></p></div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/animuse.png" alt="" />
+                    <img src="assets/images/projects/heatmap.png" alt="" />
                   </div>
-                  <h6 class="project-title">Project Title</h6>
-                  <div class="project-more-info">A music player<p>Project in <a href="#">my github</a></p></div>
+                  <h6 class="project-title">Heat Map</h6>
+                  <div class="project-more-info">A heat map showing the monthly global land surface between the years (1753 and 2015)<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/KKvjYoe">codepen</a></p></div>
                 </div>
               </div>
             </div>
