caught error thrown by buttonHoverAudio.play

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -49,6 +49,9 @@
             <li id="projects-link" class="content-menu-item">
               <a href="#projects">Projects</a>
             </li>
+            <li id="contact-link" class="content-menu-item">
+              <a href="#contact">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -196,7 +199,17 @@
                     <img src="assets/images/projects/animuse.png" alt="" />
                   </div>
                   <h6 class="project-title">Animuse</h6>
-                  <div class="project-more-info">A music player with an audio visualizer<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Animuse">my github</a></p></div>
+                  <div class="project-more-info">
+                    A music player with an audio visualizer
+                    <p>
+                      Project in
+                      <a
+                        target="_blank"
+                        href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Animuse"
+                        >my github</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
@@ -205,25 +218,61 @@
                     <img src="assets/images/projects/beatmaker.png" alt="" />
                   </div>
                   <h6 class="project-title">Beat Maker</h6>
-                  <div class="project-more-info">A beat maker<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Beatmaker">my github</a></p></div>
+                  <div class="project-more-info">
+                    A beat maker
+                    <p>
+                      Project in
+                      <a
+                        target="_blank"
+                        href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Beatmaker"
+                        >my github</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/musical_notes.png" alt="" />
+                    <img
+                      src="assets/images/projects/musical_notes.png"
+                      alt=""
+                    />
                   </div>
                   <h6 class="project-title">Musical Notes</h6>
-                  <div class="project-more-info">Music playing flip book<p>Project in <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Musical_Notes">my github</a></p></div>
+                  <div class="project-more-info">
+                    Music playing flip book
+                    <p>
+                      Project in
+                      <a
+                        target="_blank"
+                        href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Musical_Notes"
+                        >my github</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/netflix_clone.png" alt="" />
+                    <img
+                      src="assets/images/projects/netflix_clone.png"
+                      alt=""
+                    />
                   </div>
                   <h6 class="project-title">Netflix Clone</h6>
-                  <div class="project-more-info">A clone of the netflix homepage<p>Project on <a target="_blank" href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Netflix_Clone">codepen</a></p></div>
+                  <div class="project-more-info">
+                    A clone of the netflix homepage
+                    <p>
+                      Project on
+                      <a
+                        target="_blank"
+                        href="https://github.com/e-hokage777/Web-Development-Projects/tree/master/Netflix_Clone"
+                        >codepen</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
@@ -232,25 +281,62 @@
                     <img src="assets/images/projects/25+5_clock.png" alt="" />
                   </div>
                   <h6 class="project-title">25 + 5 Clock</h6>
-                  <div class="project-more-info">A 25 + 5 clock<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/wvqjJNN">codepen</a></p></div>
+                  <div class="project-more-info">
+                    A 25 + 5 clock
+                    <p>
+                      Project on
+                      <a
+                        target="_blank"
+                        href="https://codepen.io/e-hokage777/full/wvqjJNN"
+                        >codepen</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/choropleth_map.png" alt="" />
+                    <img
+                      src="assets/images/projects/choropleth_map.png"
+                      alt=""
+                    />
                   </div>
                   <h6 class="project-title">Choropleth Map</h6>
-                  <div class="project-more-info">A chloropeth map showing the education attainments for states in the US<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/zYEYqzQ">codepen</a></p></div>
+                  <div class="project-more-info">
+                    A chloropeth map showing the education attainments for
+                    states in the US
+                    <p>
+                      Project on
+                      <a
+                        target="_blank"
+                        href="https://codepen.io/e-hokage777/full/zYEYqzQ"
+                        >codepen</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
                 <div class="project-card-inner">
                   <div class="project-image">
-                    <img src="assets/images/projects/markdown_previewer.png" alt="" />
+                    <img
+                      src="assets/images/projects/markdown_previewer.png"
+                      alt=""
+                    />
                   </div>
                   <h6 class="project-title">Markdown Previewer</h6>
-                  <div class="project-more-info">Immediately preview the result of your markdown code<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/VwzzNNv">codepen</a></p></div>
+                  <div class="project-more-info">
+                    Immediately preview the result of your markdown code
+                    <p>
+                      Project on
+                      <a
+                        target="_blank"
+                        href="https://codepen.io/e-hokage777/full/VwzzNNv"
+                        >codepen</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-4 project-card">
@@ -259,8 +345,48 @@
                     <img src="assets/images/projects/heatmap.png" alt="" />
                   </div>
                   <h6 class="project-title">Heat Map</h6>
-                  <div class="project-more-info">A heat map showing the monthly global land surface between the years (1753 and 2015)<p>Project on <a target="_blank" href="https://codepen.io/e-hokage777/full/KKvjYoe">codepen</a></p></div>
+                  <div class="project-more-info">
+                    A heat map showing the monthly global land surface between
+                    the years (1753 and 2015)
+                    <p>
+                      Project on
+                      <a
+                        target="_blank"
+                        href="https://codepen.io/e-hokage777/full/KKvjYoe"
+                        >codepen</a
+                      >
+                    </p>
+                  </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="contact" class="col-12 card-holder">
+        <div class="c_card">
+          <h1 class="card-title">Contact</h1>
+          <div class="card-content">
+            <div class="row">
+              <div class="col-lg-2 col-sm-4 contact-button-container">
+                <a target="_blank" href="https://www.linkedin.com/in/eli-bansa-92475b207/" class="contact-button">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+              </div>
+              <div class="col-lg-2 col-sm-4 contact-button-container">
+                <a target="_blank" href="https://github.com/e-hokage777" class="contact-button">
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </div>
+              <div class="col-lg-2 col-sm-4 contact-button-container">
+                <a target="_blank" href="https://www.hackerrank.com/e_hokage777" class="contact-button">
+                  <i class="fa-brands fa-hackerrank"></i>
+                </a>
+              </div>
+              <div class="col-lg-2 col-sm-4 contact-button-container">
+                <a target="_blank" href="https://web.facebook.com/eli.bansa.5/" class="contact-button">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
               </div>
             </div>
           </div>
