corrected spelling mistake (chloropeth)

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -304,7 +304,7 @@
                   </div>
                   <h6 class="project-title">Choropleth Map</h6>
                   <div class="project-more-info">
-                    A chloropeth map showing the education attainments for
+                    A choropleth map showing the education attainments for
                     states in the US
                     <p>
                       Project on
