changed img7 [Musical_Notes]

--- a/Musical_Notes/musical_notes.html
+++ b/Musical_Notes/musical_notes.html
@@ -84,7 +84,7 @@
           <h2 class="footer">Footer</h2>
         </div>
         <div class="back">
-          <img src="images/img7.png" alt="" />
+          <img src="images/img7.jpg" alt="" />
         </div>
       </div>
       <div class="page">
