still working on fixing highigthing of active element issue

--- a/CSpinner/cspinner.html
+++ b/CSpinner/cspinner.html
@@ -10,10 +10,16 @@
 <body>
     <div class="spinner" id="char-spinner">
         <div class="spinner-disc">
-            <div class="spinner-item"></div>
-            <div class="spinner-item"></div>
-            <div class="spinner-item"></div>
-            <div class="spinner-item"></div>
+            <div class="spinner-item">
+                <img class="spinneritem-img" src="./imgs/crazy-girl.png" alt="crazy girl">
+            </div>
+            <div class="spinner-item">
+                <img class="spinneritem-img" src="./imgs/mikasa.png" alt="mikasa">
+            </div>
+            <div class="spinner-item">
+                <img class="spinneritem-img" src="./imgs/hancock.png" alt="hancock">
+            </div>
+            <!-- <div class="spinner-item"></div> -->
         </div>
         <button class="left-btn">&lt;</button>
         <button class="right-btn">&gt;</button>
