fixed active item issue

--- a/CSpinner/cspinner.html
+++ b/CSpinner/cspinner.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./cspinner.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./cspinner.css" />
     <title>C Spinner</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="spinner" id="char-spinner">
-        <div class="spinner-disc">
-            <div class="spinner-item">
-                <img class="spinneritem-img" src="./imgs/crazy-girl.png" alt="crazy girl">
-            </div>
-            <div class="spinner-item">
-                <img class="spinneritem-img" src="./imgs/mikasa.png" alt="mikasa">
-            </div>
-            <div class="spinner-item">
-                <img class="spinneritem-img" src="./imgs/hancock.png" alt="hancock">
-            </div>
-            <!-- <div class="spinner-item"></div> -->
+      <div class="spinner-disc">
+        <div class="spinner-item">
+          <div class="spinneritem-title">Monkey D. Luffy</div>
+          <img class="spinneritem-img" src="./imgs/luffy3.png" alt="hancock" />
         </div>
-        <button class="left-btn">&lt;</button>
-        <button class="right-btn">&gt;</button>
+        <div class="spinner-item">
+          <div class="spinneritem-title">Saber</div>
+          <img
+            class="spinneritem-img"
+            src="./imgs/crazy-girl.png"
+            alt="crazy girl"
+          />
+        </div>
+        <div class="spinner-item">
+          <div class="spinneritem-title">Mikasa Ackerman</div>
+          <img class="spinneritem-img" src="./imgs/mikasa.png" alt="mikasa" />
+        </div>
+        <div class="spinner-item">
+          <div class="spinneritem-title">Warlord Hancock</div>
+          <img class="spinneritem-img" src="./imgs/hancock.png" alt="hancock" />
+        </div>
+        <!-- <div class="spinner-item"></div> -->
+      </div>
+      <button class="spinner-btn left-btn">&lt;</button>
+      <button class="spinner-btn right-btn">&gt;</button>
     </div>
     <script src="./cspinner.js"></script>
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
