added background images [Cspinner]

--- a/CSpinner/cspinner.html
+++ b/CSpinner/cspinner.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <div class="spinner" id="char-spinner">
+      <div class="spinner-bg">
+        <img src="./imgs/onepiece_name.jpg" alt="one piece" />
+      </div>
       <div class="spinner-disc">
         <div class="spinner-item">
           <div class="spinneritem-title">Monkey D. Luffy</div>
           <img class="spinneritem-img" src="./imgs/luffy3.png" alt="hancock" />
+          <input type="hidden" value="./imgs/luffy_bg.jpg" />
         </div>
         <div class="spinner-item">
           <div class="spinneritem-title">Saber</div>
@@ -21,14 +25,17 @@
             src="./imgs/crazy-girl.png"
             alt="crazy girl"
           />
+          <input type="hidden" value="./imgs/saber_bg.jpg" />
         </div>
         <div class="spinner-item">
           <div class="spinneritem-title">Mikasa Ackerman</div>
           <img class="spinneritem-img" src="./imgs/mikasa.png" alt="mikasa" />
+          <input type="hidden" value="./imgs/mikasa_bg.jpg">
         </div>
         <div class="spinner-item">
-          <div class="spinneritem-title">Warlord Hancock</div>
+          <div class="spinneritem-title">Boa Hancock</div>
           <img class="spinneritem-img" src="./imgs/hancock.png" alt="hancock" />
+          <input type="hidden" value="./imgs/hancock_bg.jpg">
         </div>
         <!-- <div class="spinner-item"></div> -->
       </div>
